Rediseño de base de datos, Docker y panel admin
- Docker: Dockerfile multi-etapa, docker-compose (MySQL 8 + backend) y
  .env.example. Credenciales fuera del repositorio (variables de entorno).
- Flyway: las tablas y datos iniciales se crean al iniciar el sistema
  (V1 esquema, V2 roles, reglas de aprobacion, departamentos, empleados,
  usuario admin, feriados de Peru 2026-2027, catalogos y parametros).
- Usuarios separados de empleados, con roles (tipos_usuario) y jerarquia
  de aprobacion configurable (reglas_aprobacion): director, gerente,
  jefe, supervisor, gestor, tecnico, hd, noc, bo, asistente y admin.
- Cambio de contraseña obligatorio en el primer ingreso.
- Asistencia: validacion por segmentos de red ("fuera de red"), solo en
  dias programados como laborales, hora del servidor y solo la propia.
- Feriado laborado: abono automatico de 2 dias de compensacion.
- Vacaciones: abono de 30 dias por año cumplido (proceso diario).
- Saldos con libro de movimientos (abono, cargo, reversion, ajuste,
  carga inicial). Las solicitudes se bloquean sin saldo disponible y se
  descuentan al aprobar; se devuelven si se corrige a rechazado.
- Descanso medico y licencia con evidencia obligatoria (foto o PDF).
- Panel admin (/api/admin): parametros, segmentos de red, feriados,
  departamentos, roles, reglas, catalogos, usuarios y carga de saldos.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01V86dfub2GGgauSAQVNUJWW